--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,40 +1,28 @@
-
 .about__me-txt h2{
     color: var(--color-white);
     text-align: center;
-
     font-size: 3rem;
     margin-bottom: 0.7rem;
-    
-    
 }
 .about {
-    height: 80vh;
+    height: 75vh;
 }
 
 .about__me-img img{
-
-
     max-width: 100%;
     max-height: 100%;
-
-
     border-radius: 1rem;
     z-index: -1;
     position: relative;
-
 }
 
 .color__overlay {
     max-width: 100%;
     max-height: 100%;
-    
-
 }
 
 .container img{
     margin: 0;
-
 }
 
 .about__content{
@@ -43,8 +31,6 @@
     font-family: var(--font-family-poppins);
     color:#8892af;
     font-size: 1.2rem;
-
-    
 }
 
 ul {
@@ -94,7 +80,6 @@ ul {
 
 .about__me {
     width: 92.5%;
-    
     aspect-ratio: 1.34;
     border-radius: 1rem;
     background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
@@ -113,3 +98,45 @@ ul {
 
 
 }
+
+/** Responsive **/
+@media only screen and (max-width: 800px) {
+    
+
+  }
+
+
+
+@media only screen and (max-width: 600px) {
+    .about {
+        height: 90vh;
+    }
+
+    .icon__content{
+        font-size: 1rem;
+    }
+
+    ul{
+        font-size: 1rem;
+    }
+
+    .about__container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr)
+      
+    }
+    .about__me-img {
+
+        grid-row: 2;
+        grid-column: 1;
+    }   
+
+    .about__content {
+        grid-row: 1;
+        grid-column: 1;
+    }
+   
+  }
+
+
+
