--- a/src/components/experience/projectItem.css
+++ b/src/components/experience/projectItem.css
@@ -91,12 +91,12 @@
     }
   }
   
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 600px) {
     .projectList {
       width: 100%;
     }
     .projectItem {
       width: 300px;
-      height: 300px;
+      height: auto;
     }
   }
