--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -42,7 +42,26 @@ h1{
     margin-top: 2.5rem;
     display: flex;
     gap: 0.5rem;
+    padding-top: 1.25rem;
+    padding-right: 1.75;
 }
+
+/* Download Mobile Screen */
+
+@media only screen and (max-width: 600px) {
+    .download{
+        margin-top: 50px;
+      /*  background-color: aqua; */
+        height: auto;
+        padding-top: 1.25rem;
+        padding-right: 1.75;
+    }
+    .btn{
+        font-size: 25px;
+      /*  background-color: red; */
+    }
+
+  }
 
 /* Socials */
 .header__socials{
@@ -66,3 +85,10 @@ h1{
 a:hover{
     color: white;
 }
+
+/* Social Icons Responsiveness */
+@media only screen and (max-width: 600px) {
+    .header__socials {
+        visibility: hidden;
+    }
+  }
